# blip

./: .gitignore  README.md  params_default.ini  params_simple.ini  params_test.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml
blip/: config.py  run_blip  run_blip.py
blip/src/: astro.py  clebschGordan.py  fast_geometry.py  faster_geometry.py  geometry.py  hierarchical.py  instrNoise.py  makeLISAdata.py  models.py  numpyro_engine.py  orbits.py  sph_geometry.py  submodel.py  utils.py
blip/src/faster_geometry/: __init__.py  const.py  core.py  interface.py  interp.py  orbit.py  util.py
blip/tools/: plotmaker.py
docs/: api.rst  available_models.rst  conf.py  config.rst  devguide.rst  getting_started.rst  index.rst  requirements.txt  tools.rst
docs/_ext/: blip_config.py
tests/: conftest.py  params_test_faster_geometry.ini  test_config.py  test_end_to_end.py  test_faster_geometry.py  test_hyp_faster_geometry.py  test_makeLISAdata.py
